// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<Fragment>
  This is the policy page!
</Fragment>
`;

exports[`renders without crashing 2`] = `
<Fragment>
  Upload a new policy here:
</Fragment>
`;
